[gd_scene load_steps=4 format=3 uid="uid://c7sm0fke4rluh"]

[ext_resource type="Script" uid="uid://bv124rv2dxhd8" path="res://scene/game/boost_shop/boost_shop.gd" id="1_fyqoj"]
[ext_resource type="Texture2D" uid="uid://qj4ddb806x6g" path="res://aaasets/ui/back5.png" id="2_b61ke"]
[ext_resource type="Texture2D" uid="uid://di4yryh4rkgbg" path="res://aaasets/ui/arrow64.png" id="2_wshck"]

[node name="BoostShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fyqoj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_b61ke")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CoinsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Coins: 0
"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Left" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_wshck")
flip_h = true

[node name="RareLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 26
text = "Simple"

[node name="Right" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_wshck")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6

[node name="RandomBuy" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Buy random: 100"

[node name="SelectorFrame" type="ColorRect" parent="."]
visible = false
z_index = 10
layout_mode = 0
offset_right = 55.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(1, 1, 1, 0.32941177)

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer/RandomBuy" to="." method="_on_random_buy_pressed"]
